--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
-.App {
+#hero--div  {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#hero--container--1 {
+  flex: 1 
+}
+
+#hero--container--2 {
+  flex: 1 
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +49,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
