setup the add comment with spread

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,14 @@
   flex: 1 
 }
 
+.button--upvote  {
+  color: green;
+}
+
+.button--novote  {
+  color: black;
+}
+
 /* .App {
   text-align: center;
 }
