--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,41 @@
+/* * {
+  margin: 0;
+  padding: 0;
+} */
+
+li {
+  list-style: none;
+}
+
+h1{
+  margin-bottom: 20px;
+}
+
+/* body {
+  overflow-y: hidden;
+} */
+
 #hero--div  {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-flow:row nowrap;
+  height:100vh;
 }
 
 #hero--container--1 {
+  display: flex;
   flex: 1;
+  flex-flow: column nowrap;
+  justify-content: center;
+  padding-left: 50px;
 }
 
 #hero--container--2 {
-  flex: 1 
+  flex: 1;
+  overflow-y: auto;
 }
 
-.button--upvote  {
-  color: green;
-}
-
-.button--novote  {
-  color: black;
+.button--upvote {
+  opacity: 50%;
 }
 
 /* .App {
