--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ h1 {
 h2 {
   font-family: 'Helvetica Neue LT W05_97 Blk C';
   font-size: 20pt;
+  margin-top: 0px;
   margin-bottom: 15px;
 }
 
@@ -22,7 +23,6 @@ h3 {
 
 .links  {
   text-decoration: none;
-  background-color: green;
 }
 
 li {
@@ -49,8 +49,19 @@ h1{
   height: 100%;
 }
 
-#all--link  {
-  flex-flow: column;
+#all--articles--button  {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  background-color: black;
+  color: white;
+  height: 20px;
+  display: block;
+  text-decoration: none;
+  border-radius: 5px;
+  width: 75px;
+  text-align: center;
+  padding: 5px 10px 5px 10px;
+  margin-right: 10px;
+  margin-bottom: 25px;;
 }
 
 #hero--container--2 {
@@ -69,20 +80,20 @@ height: 100%;
 }
 
 #topic---button---wrapper {
-  text-decoration: underline;
+  display: block;
   float: left;
 }
 
-.navbuttons---topics {
+.navbuttons---topics { 
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
   display: block;
   text-decoration: none;
-  /* background-color: #177e89; */
+  border-radius: 5px;
+  height: 20px;
   width: 75px;
   text-align: center;
   padding: 5px 10px 5px 10px;
-  margin: 10px;
-  margin-bottom: 20px;
-  color: black
+  margin-right: 10px;
 }
 
 /* .App {
