setup the CSS for the topic buttons

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 h1 {
   font-family: 'Helvetica Neue LT W05_97 Blk C';
   font-size: 40pt;
+  margin-bottom: 20px;
 }
 
 h2 {
@@ -29,10 +30,6 @@ li {
   list-style: none;
 }
 
-h1{
-  margin-bottom: 20px;
-}
-
 #hero--div  {
   position: relative;
   width: 100%;
@@ -47,6 +44,13 @@ h1{
   justify-content: center;
   width: 50%;
   height: 100%;
+}
+
+#hero--container--2 {
+float: right;
+left: 30%;
+width: 50%;
+height: 100%;
 }
 
 #all--articles--button  {
@@ -64,13 +68,6 @@ h1{
   margin-bottom: 25px;;
 }
 
-#hero--container--2 {
-float: right;
-left: 30%;
-width: 50%;
-height: 100%;
-}
-
 .button--upvote {
   opacity: 50%;
 }
@@ -79,9 +76,9 @@ height: 100%;
   padding: 0px 150px 0px 50px;
 }
 
-#topic---button---wrapper {
-  display: block;
-  float: left;
+.topic---button---wrapper {
+  display: flex;
+  /* float: left; */
 }
 
 .navbuttons---topics { 
