--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
-} */
+}
 
 h1 {
   font-family: 'Helvetica Neue LT W05_97 Blk C';
@@ -28,6 +28,12 @@ h3 {
 
 li {
   list-style: none;
+}
+
+.sort-button-div  {
+  display: flex;
+  flex-direction: row;
+  margin: 30px 0 30px 0px;
 }
 
 #hero--div  {
@@ -64,8 +70,50 @@ height: 100%;
   width: 75px;
   text-align: center;
   padding: 5px 10px 5px 10px;
-  margin-right: 10px;
-  margin-bottom: 25px;;
+  margin-top: 15px;
+}
+
+.icon-show-text  {
+  margin-left: 5px;
+}
+
+.icon-hide-text  {
+  display: none;
+}
+
+
+.sort-icon-hide   {
+  color: #999a9a;
+  font-size: 20pt;
+}
+
+.sort-icon-show   {
+  color: #black;
+  font-size: 20pt;
+}
+
+.sort-button-deselected {
+  display: flex;
+  flex-direction: row;
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 14pt;
+  background-color: transparent;
+  border: none;
+  color: #999a9a;
+  margin-right: 20px;
+  cursor:pointer;
+}
+
+.sort-button-selected {
+  display: flex;
+  flex-direction: row;
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 14pt;
+  background-color: transparent;
+  border: none;
+  color: black;
+  margin-right: 20px;
+  cursor:pointer;
 }
 
 .button--upvote {
