--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 * {
   margin: 0;
   padding: 0;
+  
 }
+
+p
 
 h1 {
   font-family: 'Helvetica Neue LT W05_97 Blk C';
@@ -22,6 +25,11 @@ h3 {
   margin-bottom: 15px;
 }
 
+.hero-title {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 40pt;
+}
+
 .links  {
   text-decoration: none;
 }
@@ -33,7 +41,9 @@ li {
 .sort-button-div  {
   display: flex;
   flex-direction: row;
-  margin: 30px 0 30px 0px;
+  margin: 30px 0 20px 0px;
+  border-bottom: 1px dotted #999a9a;
+  padding-bottom: 20px;
 }
 
 #hero--div  {
@@ -57,6 +67,12 @@ float: right;
 left: 30%;
 width: 50%;
 height: 100%;
+/* padding-right: 25px; */
+/* padding-left: 25px; */
+}
+
+.right-column {
+  margin-right: 25px;
 }
 
 #all--articles--button  {
@@ -88,7 +104,7 @@ height: 100%;
 }
 
 .sort-icon-show   {
-  color: #black;
+  color: black;
   font-size: 20pt;
 }
 
@@ -116,12 +132,63 @@ height: 100%;
   cursor:pointer;
 }
 
+.vote-div  {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+}
+
+.button--downvote {
+  text-align: center;
+  width: 30px;
+  color:white;
+  background-color: #cccccc;
+  border: none;
+  border-radius: 5px;
+  margin-right: 5px;
+  cursor:pointer;
+}
+
 .button--upvote {
-  opacity: 50%;
+  text-align: center;
+  width: 30px;
+  color:white;
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  margin-right: 5px;
+  cursor:pointer;
+}
+
+.button--downvote--number {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  text-align: center;
+  width: 30px;
+  color:white;
+  background-color: #cccccc;
+  border: none;
+  border-radius: 5px;
+  margin-right: 5px;
+}
+
+.button--upvote--number {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  text-align: center;
+  width: 30px;
+  color:white;
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  margin-right: 5px;
+}
+
+.vote-icon  {
+  font-size: 15pt;
+  margin-bottom: 0px;
 }
 
 #navbar {
-  padding: 0px 150px 0px 50px;
+  padding: 0px 100px 0px 50px;
 }
 
 .topic---button---wrapper {
@@ -140,6 +207,75 @@ height: 100%;
   padding: 5px 10px 5px 10px;
   margin-right: 10px;
 }
+
+.article-card-title {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 15pt;
+  text-decoration: none;
+  margin-bottom: 5px;
+  color: black;
+}
+
+.article-card-title:hover{
+  text-decoration: underline;
+}
+
+.article-card{
+  margin: 20px 0 2px 0px;
+  padding-bottom: 20px;
+  border-bottom: 1px dotted #999a9a;
+}
+
+.article-card-div {
+display: flex;
+}
+
+.article-card-div-left {
+flex: 1;
+}
+
+.article-card-div-right {
+display: inline-block;
+align-self: flex-end;
+}
+
+.article-card-date  {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-size: 12pt;
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: #999a9a;
+}
+
+.article-card-username  {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-size: 12pt;
+  text-decoration: none;
+  margin-bottom: 15px;
+  color:black;
+}
+
+.article-card-comment  {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-size: 12pt;
+  text-decoration: none;
+  color:black;
+  margin-top: 10px;
+}
+
+.article-card-topic {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  display: block;
+  text-decoration: none;
+  border-radius: 5px;
+  height: 20px;
+  width: 75px;
+  text-align: center;
+  padding: 5px 10px 5px 10px;
+  color: white;
+}
+
+
 
 /* .App {
   text-align: center;
