--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@ li {
   margin: auto;
 }
 
+@media (min-width: 750px) {
 #hero--container--1 {
   position: fixed;
   display: flex;
@@ -67,12 +68,43 @@ float: right;
 left: 30%;
 width: 50%;
 height: 100%;
-/* padding-right: 25px; */
-/* padding-left: 25px; */
+}
+
+#navbar {
+  padding: 0px 100px 0px 50px;
 }
 
 .right-column {
   margin-right: 25px;
+}
+
+}
+
+@media (max-width: 749px) {
+  #hero--container--1 {
+    /* position: fixed; */
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+  
+  #hero--container--2 {
+  /* float: right; */
+  left: 30%;
+  width: 100%;
+  height: 100%;
+  }
+
+  #navbar {
+    padding: 0px 10px 0px 10px;
+  }
+
+  .right-column {
+    margin: 10px;
+  }
+
 }
 
 #all--articles--button  {
@@ -147,6 +179,7 @@ height: 100%;
   border-radius: 5px;
   margin-right: 5px;
   cursor:pointer;
+  outline: none;
 }
 
 .button--upvote {
@@ -158,6 +191,7 @@ height: 100%;
   border-radius: 5px;
   margin-right: 5px;
   cursor:pointer;
+  outline: none;
 }
 
 .button--downvote--number {
@@ -184,11 +218,6 @@ height: 100%;
 
 .vote-icon  {
   font-size: 15pt;
-  margin-bottom: 0px;
-}
-
-#navbar {
-  padding: 0px 100px 0px 50px;
 }
 
 .topic---button---wrapper {
@@ -208,14 +237,6 @@ height: 100%;
   margin-right: 10px;
 }
 
-.article-card-title {
-  font-family: 'Helvetica Neue LT W05_97 Blk C';
-  font-size: 15pt;
-  text-decoration: none;
-  margin-bottom: 5px;
-  color: black;
-}
-
 .article-card-title:hover{
   text-decoration: underline;
 }
@@ -224,6 +245,14 @@ height: 100%;
   margin: 20px 0 2px 0px;
   padding-bottom: 20px;
   border-bottom: 1px dotted #999a9a;
+}
+
+.article-card-title {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 15pt;
+  text-decoration: none;
+  margin-bottom: 5px;
+  color: black;
 }
 
 .article-card-div {
@@ -241,7 +270,7 @@ align-self: flex-end;
 
 .article-card-date  {
   font-family: 'Helvetica Neue LT W05_45 Light';
-  font-size: 12pt;
+  font-size: 10pt;
   text-decoration: none;
   margin-bottom: 10px;
   color: #999a9a;
@@ -275,7 +304,84 @@ align-self: flex-end;
   color: white;
 }
 
+.pagination-div {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0 40px 0;
+}
 
+.pagination-button  {
+  text-align: center;
+  width: 30px;
+  color:white;
+  background-color: #cccccc;
+  border: none;
+  border-radius: 5px;
+  margin-right: 5px;
+  cursor:pointer;
+  outline: none;
+}
+
+.pagination-number  {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-size: 12pt;
+}
+
+button:disabled {
+  opacity: 50%;
+  cursor: auto;
+}
+
+.article-topic {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  display: block;
+  text-decoration: none;
+  border-radius: 5px;
+  height: 20px;
+  width: 75px;
+  text-align: center;
+  padding: 5px 10px 5px 10px;
+  color: white;
+}
+
+.article-body {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-size: 12pt;
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: black;
+  line-height: 1.3;
+}
+
+.article-date {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-size: 10pt;
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: #999a9a;
+  line-height: 1.3;
+}
+
+.article-title  {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 15pt;
+  text-decoration: none;
+  margin-bottom: 5px;
+  color: black;
+}
+
+.article-card-username{
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 12pt;
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: black;
+  line-height: 1.3;
+}
+
+.comment-form {
+  
+}
 
 /* .App {
   text-align: center;
