--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@font-face{
+  font-family:"Helvetica Neue LT W05_45 Light";
+  src:url("Fonts/f9c5199e-a996-4c08-9042-1eb845bb7495.woff2") format("woff2"),url("Fonts/2a34f1f8-d701-4949-b12d-133c1c2636eb.woff") format("woff");
+}
+@font-face{
+  font-family:"Helvetica Neue LT W05_97 Blk C";
+  src:url("Fonts/f2f49a5e-567d-4dfa-8152-c28c8f60c84e.woff2") format("woff2"),url("Fonts/ea7ce364-9de4-43c3-9b0b-7b26af453629.woff") format("woff");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -380,7 +389,7 @@ button:disabled {
 }
 
 .comment-form {
-  
+
 }
 
 /* .App {
