--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,6 @@
   
 }
 
-p
-
 h1 {
   font-family: 'Helvetica Neue LT W05_97 Blk C';
   font-size: 40pt;
@@ -42,6 +40,12 @@ h3 {
 .links  {
   text-decoration: none;
 }
+
+.not-selected-topic  {
+
+}
+
+
 
 li {
   list-style: none;
@@ -116,20 +120,6 @@ height: 100%;
 
 }
 
-#all--articles--button  {
-  font-family: 'Helvetica Neue LT W05_97 Blk C';
-  background-color: black;
-  color: white;
-  height: 20px;
-  display: block;
-  text-decoration: none;
-  border-radius: 5px;
-  width: 75px;
-  text-align: center;
-  padding: 5px 10px 5px 10px;
-  margin-top: 15px;
-}
-
 .icon-show-text  {
   margin-left: 5px;
 }
@@ -141,19 +131,19 @@ height: 100%;
 
 .sort-icon-hide   {
   color: #999a9a;
-  font-size: 20pt;
+  font-size: 15pt;
 }
 
 .sort-icon-show   {
   color: black;
-  font-size: 20pt;
+  font-size: 15pt;
 }
 
 .sort-button-deselected {
   display: flex;
   flex-direction: row;
   font-family: 'Helvetica Neue LT W05_97 Blk C';
-  font-size: 14pt;
+  font-size: 12pt;
   background-color: transparent;
   border: none;
   color: #999a9a;
@@ -165,7 +155,7 @@ height: 100%;
   display: flex;
   flex-direction: row;
   font-family: 'Helvetica Neue LT W05_97 Blk C';
-  font-size: 14pt;
+  font-size: 12pt;
   background-color: transparent;
   border: none;
   color: black;
@@ -234,7 +224,7 @@ height: 100%;
   /* float: left; */
 }
 
-.navbuttons---topics { 
+.navbuttons---topics---selected { 
   font-family: 'Helvetica Neue LT W05_97 Blk C';
   display: block;
   text-decoration: none;
@@ -244,6 +234,48 @@ height: 100%;
   text-align: center;
   padding: 5px 10px 5px 10px;
   margin-right: 10px;
+}
+
+.navbuttons---topics---faded { 
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  display: block;
+  text-decoration: none;
+  border-radius: 5px;
+  height: 20px;
+  width: 75px;
+  text-align: center;
+  padding: 5px 10px 5px 10px;
+  margin-right: 10px;
+  opacity: 65%;
+}
+
+#all--articles--button--selected  {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  background-color: black;
+  color: white;
+  height: 20px;
+  display: block;
+  text-decoration: none;
+  border-radius: 5px;
+  width: 75px;
+  text-align: center;
+  padding: 5px 10px 5px 10px;
+  margin-top: 15px;
+}
+
+#all--articles--button--faded  {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  background-color: black;
+  color: white;
+  height: 20px;
+  display: block;
+  text-decoration: none;
+  border-radius: 5px;
+  width: 75px;
+  text-align: center;
+  padding: 5px 10px 5px 10px;
+  margin-top: 15px;
+  opacity: 65%;
 }
 
 .article-card-title:hover{
@@ -303,15 +335,11 @@ align-self: flex-end;
 
 .article-card-topic {
   font-family: 'Helvetica Neue LT W05_97 Blk C';
-  display: block;
   text-decoration: none;
-  border-radius: 5px;
-  height: 20px;
-  width: 75px;
   text-align: center;
-  padding: 5px 10px 5px 10px;
-  color: white;
+  color: black;
 }
+
 
 .pagination-div {
   display: flex;
