--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,6 @@ h3 {
   text-decoration: none;
 }
 
-.not-selected-topic  {
-
-}
-
 
 
 li {
@@ -88,7 +84,7 @@ height: 100%;
 }
 
 .right-column {
-  margin-right: 25px;
+  margin-right: 50px;
 }
 
 }
@@ -111,11 +107,15 @@ height: 100%;
   }
 
   #navbar {
-    padding: 0px 10px 0px 10px;
+    padding: 20px 20px 20px 20px;
   }
 
   .right-column {
-    margin: 10px;
+    margin: 20px;
+  }
+
+  .article-div{
+    margin: 20px;
   }
 
 }
@@ -246,7 +246,11 @@ height: 100%;
   text-align: center;
   padding: 5px 10px 5px 10px;
   margin-right: 10px;
-  opacity: 65%;
+  opacity: 0.65;
+}
+
+.navbuttons---topics---faded:hover  {
+  opacity: 1;
 }
 
 #all--articles--button--selected  {
@@ -275,7 +279,11 @@ height: 100%;
   text-align: center;
   padding: 5px 10px 5px 10px;
   margin-top: 15px;
-  opacity: 65%;
+  opacity: 0.65;
+}
+
+#all--articles--button--faded:hover  {
+  opacity: 1;
 }
 
 .article-card-title:hover{
@@ -290,7 +298,7 @@ height: 100%;
 
 .article-card-title {
   font-family: 'Helvetica Neue LT W05_97 Blk C';
-  font-size: 15pt;
+  font-size: 20pt;
   text-decoration: none;
   margin-bottom: 5px;
   color: black;
@@ -365,46 +373,53 @@ align-self: flex-end;
 }
 
 button:disabled {
-  opacity: 50%;
+  opacity: 0.5;
   cursor: auto;
+}
+
+.article-div{
+  margin-right: 25px;
+}
+
+.article-div-copy {
+  margin: 20px 0 20px 0;
+  border-bottom: 1px dotted #999a9a;
+  padding-bottom: 20px;
 }
 
 .article-topic {
   font-family: 'Helvetica Neue LT W05_97 Blk C';
   display: block;
   text-decoration: none;
-  border-radius: 5px;
-  height: 20px;
-  width: 75px;
-  text-align: center;
-  padding: 5px 10px 5px 10px;
-  color: white;
+  color: black;
+  margin-bottom: 5px;
 }
 
-.article-body {
-  font-family: 'Helvetica Neue LT W05_45 Light';
-  font-size: 12pt;
+.article-title  {
+  margin: 0 0 10px 0;
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 40pt;
   text-decoration: none;
-  margin-bottom: 10px;
   color: black;
-  line-height: 1.3;
+  line-height: 55px;
 }
 
 .article-date {
   font-family: 'Helvetica Neue LT W05_45 Light';
-  font-size: 10pt;
+  font-size: 12pt;
   text-decoration: none;
-  margin-bottom: 10px;
-  color: #999a9a;
+  margin-bottom: 20px;
+  color: #7e7e7e;
   line-height: 1.3;
 }
 
-.article-title  {
-  font-family: 'Helvetica Neue LT W05_97 Blk C';
+.article-body {
+  font-family: 'Helvetica Neue LT W05_45 Light';
   font-size: 15pt;
   text-decoration: none;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
   color: black;
+  line-height: 1.3;
 }
 
 .article-card-username{
@@ -414,47 +429,99 @@ button:disabled {
   margin-bottom: 10px;
   color: black;
   line-height: 1.3;
+  margin-top: 20px;
 }
 
-.comment-form {
-
+textarea {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  width: 100%;
+  height: 150px;
+  padding: 10px 10px;
+  box-sizing: border-box;
+  font-size: 15px;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  border: 0.5px solid #ccc;
+  resize: none;
+  margin-bottom: 10px;
 }
 
-/* .App {
-  text-align: center;
+textarea:focus{
+  outline:0px !important;
+  -webkit-appearance:none;
+  box-shadow: none !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.comment-button-div  {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.add-comment-button {
+  width: 35px;
+  height: 35px;
+  border-radius: 20px;
+  border: none;
+  background-color: #177e89;
+  font-size: 17px;
+  padding-top: 2px;
   color: white;
+  margin-bottom: 0px;
+  cursor:pointer;
+  -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+.add-comment-button:hover {
+  background-color: black;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.comment-text {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-size: 15pt;
+  text-decoration: none;
+  padding-top: 3px;
+  margin-left: 8px;
+  color: black;
+  line-height: 1.3;
+}
+
+.article-comment-username  {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 12pt;
+  text-decoration: none;
+  margin-bottom: 15px;
+  color:black;
+}
+
+.article-comment-body  {
+  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-size: 12pt;
+  text-decoration: none;
+  margin-bottom: 15px;
+  color:black;
+}
+
+.article-comment-delete-button  {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 16px;
+  background-color: white;
+  color: black;
+  height: 30px;
+  display: block;
+  text-decoration: none;
+  border-radius: 5px;
+  text-align: center;
+  cursor: pointer;
+  border: 0.5px solid #ccc;
+  margin-top: 15px;
+  padding: 0 10px 0 10px;
+}
+
+.article-comment-delete-button:hover  {
+background-color: black;
+color: white;
+}
