--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,8 @@ li {
 .sort-button-div  {
   display: flex;
   flex-direction: row;
-  margin: 30px 0 20px 0px;
+  margin: 0 0 20px 0px;
+  padding-top: 30px;
   border-bottom: 1px dotted #999a9a;
   padding-bottom: 20px;
 }
@@ -79,11 +80,25 @@ width: 50%;
 height: 100%;
 }
 
+.username-div {
+  width: 50px;
+  position: absolute;
+  top: 0;
+  margin: 30px 0 0 50px;
+  display: flex;
+  flex-direction: row;
+}
+
 #navbar {
   padding: 0px 100px 0px 50px;
 }
 
 .right-column {
+  margin-right: 50px;
+}
+
+.article-div{
+  margin-top: 25px;
   margin-right: 50px;
 }
 
@@ -99,6 +114,13 @@ height: 100%;
     height: 100%;
   }
   
+  .username-div {
+    width: 50px;
+    margin: 30px 0 0 20px;
+    display: flex;
+    flex-direction: row;
+  }
+
   #hero--container--2 {
   /* float: right; */
   left: 30%;
@@ -107,7 +129,7 @@ height: 100%;
   }
 
   #navbar {
-    padding: 20px 20px 20px 20px;
+    padding: 40px 20px 40px 20px;
   }
 
   .right-column {
@@ -118,6 +140,17 @@ height: 100%;
     margin: 20px;
   }
 
+}
+
+.username-image {
+  height: 35px;
+  border-radius: 20px;
+}
+
+.username-copy  {
+  padding: 0 0 0 10px;
+  margin-bottom: 5px;
+  font-family: 'Helvetica Neue LT W05_45 Light';
 }
 
 .icon-show-text  {
@@ -264,7 +297,7 @@ height: 100%;
   width: 75px;
   text-align: center;
   padding: 5px 10px 5px 10px;
-  margin-top: 15px;
+  margin: 15px 0 15px 0;
 }
 
 #all--articles--button--faded  {
@@ -319,17 +352,18 @@ align-self: flex-end;
 
 .article-card-date  {
   font-family: 'Helvetica Neue LT W05_45 Light';
-  font-size: 10pt;
+  font-size: 12pt;
   text-decoration: none;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: #999a9a;
 }
 
 .article-card-username  {
-  font-family: 'Helvetica Neue LT W05_45 Light';
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
   font-size: 12pt;
   text-decoration: none;
-  margin-bottom: 15px;
+  margin-top: 5px;
+  margin-bottom: 20px;
   color:black;
 }
 
@@ -377,14 +411,10 @@ button:disabled {
   cursor: auto;
 }
 
-.article-div{
-  margin-right: 25px;
-}
-
 .article-div-copy {
-  margin: 20px 0 20px 0;
+  margin: 0px 0px 20px 0px;
   border-bottom: 1px dotted #999a9a;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 .article-topic {
@@ -392,7 +422,7 @@ button:disabled {
   display: block;
   text-decoration: none;
   color: black;
-  margin-bottom: 5px;
+  margin: 0 0 20px 0;
 }
 
 .article-title  {
@@ -408,10 +438,21 @@ button:disabled {
   font-family: 'Helvetica Neue LT W05_45 Light';
   font-size: 12pt;
   text-decoration: none;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   color: #7e7e7e;
   line-height: 1.3;
 }
+
+.article-username{
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 12pt;
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: black;
+  line-height: 1.3;
+  margin: 5px 0 20px 0;
+}
+
 
 .article-body {
   font-family: 'Helvetica Neue LT W05_45 Light';
@@ -422,15 +463,6 @@ button:disabled {
   line-height: 1.3;
 }
 
-.article-card-username{
-  font-family: 'Helvetica Neue LT W05_97 Blk C';
-  font-size: 12pt;
-  text-decoration: none;
-  margin-bottom: 10px;
-  color: black;
-  line-height: 1.3;
-  margin-top: 20px;
-}
 
 textarea {
   font-family: 'Helvetica Neue LT W05_45 Light';
