--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ li {
   display: flex;
   flex-direction: row;
   margin: 0 0 20px 0px;
-  padding-top: 30px;
+  padding-top: 20px;
   border-bottom: 1px dotted #999a9a;
   padding-bottom: 20px;
 }
@@ -102,6 +102,13 @@ height: 100%;
   margin-right: 50px;
 }
 
+.add-article-div  {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px dotted #999a9a;
+  padding: 30px 0 20px 0;
+}
+
 }
 
 @media (max-width: 749px) {
@@ -129,7 +136,7 @@ height: 100%;
   }
 
   #navbar {
-    padding: 40px 20px 40px 20px;
+    padding: 40px 20px 10px 20px;
   }
 
   .right-column {
@@ -138,6 +145,14 @@ height: 100%;
 
   .article-div{
     margin: 20px;
+  }
+
+  .add-article-div{
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px dotted #999a9a;
+    padding-top: 0;
+    padding-bottom: 20px;
   }
 
 }
@@ -511,6 +526,10 @@ textarea:focus{
           transform: rotate(90deg);
 }
 
+.add-comment-button:focus {
+  outline: none;
+}
+
 .comment-text {
   font-family: 'Helvetica Neue LT W05_45 Light';
   font-size: 15pt;
@@ -556,4 +575,126 @@ textarea:focus{
 .article-comment-delete-button:hover  {
 background-color: black;
 color: white;
+}
+
+.add-article-div-open  {
+  display: flex;
+  flex-direction: row;
+  border-bottom:none;
+  padding: 30px 0 20px 0;
+}
+
+.select-topic-div {
+  display: flex;
+  flex-direction: row;
+}
+
+.select-topic  {
+    font-family: 'Helvetica Neue LT W05_97 Blk C';
+    height: 30px;
+    font-size: 16px;
+    background-color: white;
+    border-radius: 5px;
+    padding: 0 5px 0 5px;
+    margin-bottom: 11px;
+}
+
+.select-warning-copy {
+  padding: 4px 0 0 10px;
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  color: #177e89;
+}
+
+.add-article-button {
+  width: 45px;
+  height: 45px;
+  border-radius: 25px;
+  border: none;
+  background-color: #177e89;
+  font-size: 25px;
+  padding-top: 2px;
+  color: white;
+  margin-bottom: 0px;
+  cursor:pointer;
+  -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+}
+
+.add-article-button:focus {
+  outline: none;
+}
+
+.add-article-button:hover {
+  background-color: black;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.add-article-text {
+  font-family: 'Helvetica Neue LT W05_97 Blk C';
+  font-size: 15pt;
+  text-decoration: none;
+  padding-top: 9px;
+  margin-left: 8px;
+  color: black;
+  line-height: 1.3;
+}
+
+
+.article-title-form {
+font-family: 'Helvetica Neue LT W05_45 Light';
+width: 100%;
+height: 50px;
+padding: 5px 10px;
+box-sizing: border-box;
+font-size: 15px;
+border-radius: 4px;
+background-color: #f8f8f8;
+border: 0.5px solid #ccc;
+resize: none;
+margin-bottom: 10px;
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid black;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color:black transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner-div {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 }
